Estudos HTML5 and CSS3 date 27-07-2020

--- a/HTML5 and CSS3/tagheader.html
+++ b/HTML5 and CSS3/tagheader.html
@@ -4,12 +4,24 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Página de Teste</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='recursos/style.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Título da página</h1>
+        <p>Subtitulo</p>
+    </header>
+    <nav>
+        <a href="">Link1</a>
+        <a href="">Link2</a>
+        <a href="">Link3</a>
+        <a href="">Link4</a>
+    </nav>
+    <footer>
+        Rodapé da página
+    </footer>
 </body>
 </html>
