Update de arquivos, atualizando lista.

--- a/HTML5 and CSS3/tagaudio.html
+++ b/HTML5 and CSS3/tagaudio.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 <body>
-    <audio controls autoplay muted preload="">
+    <audio controls autoplay muted preload="auto">
         <source src="recursos/01 The Days.mp3" type="audio/mpeg">
     </audio>
 </body>
