Atualização diária de estudos e exercícios.

--- a/Jquery/Evitando Conflito/index.html
+++ b/Jquery/Evitando Conflito/index.html
@@ -8,6 +8,8 @@
 <body>
     <div class="botao">Este é um teste</div>
 
+    <input type="text" name="nome">
+
     <button  id="botao1" class="botao">Botão</button>
     <button class="botao">Botão 2</button>
 
